--- a/rollforperformance/index.html
+++ b/rollforperformance/index.html
@@ -31,7 +31,7 @@
       apiKey: "AIzaSyAWfMdxpfNWD31uWWCUWge2s0pXXFREy64",
       authDomain: "edelith-47ffa.firebaseapp.com",
       projectId: "edelith-47ffa",
-      storageBucket: "edelith-47ffa.appspot.com",
+      storageBucket: "edelith-47ffa.firebasestorage.app",
       messagingSenderId: "650427014769",
       appId: "1:650427014769:web:957d9fdb4f33734853c5d0",
       measurementId: "G-TVXGLMKW16"
